Add anchor tag to description.

--- a/event_create_source_businessesfornetneutrality.html
+++ b/event_create_source_businessesfornetneutrality.html
@@ -4,7 +4,7 @@
     <div class="ak-grid-row">
         <div class="ak-grid-col ak-grid-col-12-of-12">
             {% if not update %}
-                <h2>{{ page.title }}</h2>
+                <h2>MAY 2, 2018: SMALL BUSINESSES SAVE THE INTERNET</h2>
             {% else %}
                 <h2>Update Event Information</h2>
             {% endif %}
@@ -25,7 +25,7 @@
         <div class="ak-page-content">
             <div class="ak-page-content">
                 <p>As national “Small Business Week” approaches, small business owners and Internet users are uniting to take a strong stand for net neutrality rules.</p>
-                <p>On May 2nd, at 12pm local time, businesses and concerned citizens will gather at Congressional offices across the country to deliver an open letter to lawmakers and hold press conferences outside offices to get the attention of local media, just weeks before Congress is expected to vote on the Congressional Review Act (CRA) resolution to block the FCC’s net neutrality repeal.</p>
+                <p>On May 2nd, at 12pm local time, businesses and concerned citizens will gather at Congressional offices across the country to deliver an <a href="https://www.businessesfornetneutrality.com/">open letter</a> to lawmakers and hold press conferences outside offices to get the attention of local media, just weeks before Congress is expected to vote on the Congressional Review Act (CRA) resolution to block the FCC’s net neutrality repeal.</p>
                 <p><strong>To organize a local delivery and press conference, simply fill out your information below so we can post it on the map and recruit others to join you.</strong></p>
                 <p>Don’t worry if you’ve never done anything like this before.  Many people who organize a delivery are doing it for the first time.  Organizing a delivery and local press conference will make a difference, and we’ll be here to help you.</p>
             </div>
@@ -145,7 +145,7 @@
                         </div>
                     {% endif %}
                     <input id="id_event_max_attendees" type="hidden" name="event_max_attendees" value="1000">
-                    <input id="id_action_categories" type="hidden" name="action_categories" value="protestcongress">  
+                    <input id="id_action_categories" type="hidden" name="action_categories" value="letterdelivery">  
                     <!-- <div>
                         <label for="id_event_max_attendees">
                             Maximum attendance<br><small>Leave blank for unlimited sign-ups</small>
