Add links to event info section.

--- a/event_create_source_businessesfornetneutrality.html
+++ b/event_create_source_businessesfornetneutrality.html
@@ -40,7 +40,8 @@
             </div>
             <div id="event-info">
                     <h3>Tell us where your event is so others can join you!</h3>
-                    <p>Use <a target="_blank" href="https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0">this</a> to find out which one of your lawmaker’s still has not come out in support of the net neutrality CRA resolution and find their in-district office address. Need help figuring out who represents you in Congress? Click <a target="_blank" href="https://callyourrep.co/">here</a>. Preserving the open Internet matters to the overwhelming majority of Americans, so it’s important that we persuade as many members of Congress as possible to vote for the CRA resolution and thank those that already are. </p>
+                    <p>To decide where to hold your delivery and press conference, you will need to decide which Senator or Representatives’ office to organize your event at. Use <a href="https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0">this</a> spreadsheet to find out which one of your lawmaker’s still has not come out in support of the net neutrality CRA resolution and find their in-district office address. If you have both a senator and a representative, prioritize the senator. If all of your members are in support of the CRA, pick one at a location that’s easier for you to organize. In order to win, we need to BOTH persuade as many members of Congress as possible to vote for the CRA resolution and thank those that already are.</p>
+                    <p>Need help figuring out who represents you in Congress? Click <a href="https://callyourrep.co/">here</a>. Make sure to include the office address of your member of Congress as the “event address” below.</p>
                     <div class="unknown_user">
                         <!--
                             This only shows if the user form includes all of the
