--- a/event_create_source_businessesfornetneutrality.html
+++ b/event_create_source_businessesfornetneutrality.html
@@ -92,7 +92,8 @@
 
             <div id="ak-event-info">
                 <h3>Tell us about your event:</h3>
-                <div>Tell us which lawmaker you are visiting by adding their name to the "Event Name" section below. For example, before submitting your event, the event name should read, "It’s recess but we’re not playing on net neutrality Senator John Kennedy," or, "It’s recess but we’re not playing on net neutrality Representative Mike Coffman."</div>
+                <div>Tell us which lawmaker you are visiting by adding their name to the "Event Name" section below. For example, before submitting your event, the event name should read, "Small Businesses Save the Internet Senator NAME," or, "Small Businesses Save the Internet Representative NAME."
+                </div>
                 <div>
                     {% if campaign.use_title %}
                         <div>
