Update public description text.:

--- a/event_create_source_businessesfornetneutrality.html
+++ b/event_create_source_businessesfornetneutrality.html
@@ -98,7 +98,8 @@
                     {% if campaign.use_title %}
                         <div>
                             <label for="id_event_title">Event name<span class="ak-required-flag">*</span></label>
-                            <input id="id_event_title" type="text" name="event_title" value="It’s recess but we’re not playing on net neutrality [Senator/ Representative (name)]">
+                            <input id="id_event_title" type="text" name="event_title" value="Small Businesses Save the Internet [Senator/ Representative NAME] 
+                            ">
                         </div>
                     {% endif %}
 
@@ -198,13 +199,14 @@
                         </span>
                     </label>
                       <textarea id="id_event_public_description" name="event_public_description">  
-RSVP now to sign-wave for net neutrality outside your lawmaker’s office on Thursday, April 5th at 12PM and drop-off materials explaining why they need to vote for the CRA and protect real net neutrality rules.
+RSVP now to join forces with small businesses and startups in your area to hand deliver an open letter in support of net neutrality to lawmakers and host a press conference with local media outside their office on Wednesday, May 2nd at 12 noon.
 
-Net neutrality is not dead yet and it’s not too late to save it, but the clock is ticking! Congress will soon vote on the Congressional Review Act (CRA) resolution to reverse the FCC’s repeal, and before the CRA comes up for a vote, we need to make sure that as many lawmakers as possible are on our side. 
+It’s not too late to save net neutrality, but the clock is ticking! Since small businesses of all types rely on the open Internet to reach customers and grow, they need strong net neutrality protections restored.
 
-Lawmakers are home for a congressional recess until April 6th so this a crucial opportunity to show up in force and put real pressure on them to support the CRA effort. 
+Congress will vote on the Congressional Review Act (CRA) resolution to reverse the FCC’s repeal as soon as the second week of May. But before the CRA comes up for a vote, we need to make sure that as many businesses and Internet uses as possible hand-deliver our open letter to pressure lawmakers into voting for the CRA.
 
-Once you RSVP, you’ll get materials to drop-off at your lawmaker’s office during your visit and we’ll connect you with others in your community attending through a pre-event call.
+RSVP to join a letter delivery and press conference near your and you’ll receive a package explaining how to make the most of your visit to your lawmaker’s office. You’ll also have a chance to connect with others in your community by RSVPing to a pre-event call.
+                        
                       </textarea>
                 </div>
 
