--- a/event_create_source_businessesfornetneutrality.html
+++ b/event_create_source_businessesfornetneutrality.html
@@ -106,7 +106,14 @@
                     {% with event_starts_at as date_field %}
                         <div id="id_event_starts_at_row">
                             <label for="id_event_starts_at">Start date/time</label>
-                            {% include "./date_picker.html" %}
+                            <span class="ak-datetime">
+                                <input type="text" placeholder="mm/dd/yyyy" value="05/02/2018" size="10" name="{{ date_field.name }}_date" id="id_{{ date_field.name }}_date" value="{{ date_field.default_date }}" format="date">             
+                                <input type="text" placeholder="hh:mm" size="8" name="{{ date_field.name }}_time" id="id_{{ date_field.name }}_time" value="12" format="time">
+                                <select name="{{ date_field.name }}_ampm" id="id_{{ date_field.name }}_ampm">
+                                <option {% if date_field.default_ampm == 'AM' %}selected{% endif %} value="AM">AM</option>
+                                <option selected value="PM">PM</option>
+                                </select>
+                            </span>
                         </div>
 
 
