Update event venue.

--- a/event_create_source_map.html
+++ b/event_create_source_map.html
@@ -168,7 +168,7 @@
                     {% with "event_" as input_name_prefix %}
                         <div>
                             <label for="id_event_venue">Venue<span class="ak-required-flag">*</span></label>
-                            <input id="id_event_venue" type="text" if-at-my-house="Home" name="event_venue" value='[Insert your Senator/ Representative]’s Congressional office.'>
+                            <input id="id_event_venue" type="text" if-at-my-house="Home" name="event_venue" value='Outside [Insert your Senator/ Representative]’s Congressional office'>
                         </div>
                         <div style="display:none;">
                             <label for="event_country">Country</label>
