--- a/event_create.html
+++ b/event_create.html
@@ -94,7 +94,7 @@
 
             <div id="ak-event-info">
                 <h3>Tell us about your event:</h3>
-                <div>Tell us which lawmaker you are visiting by adding their name to the "Event Name" section below. For example, before submitting your event, the event name should read, "It’s recess but we’re not playing on net neutrality Senator John Kennedy," or, "It’s recess but we’re not playing on net neutrality Representative Mike Coffman."</div>
+                <div>Add your member of Congress’ name to the protest’s event title so we can add it the map and recruit others to join you. For example, before submitting your event, the name should read, "RED ALERT: Protest for Net Neutrality outside Senator John Kennedy’s office," or, “RED ALERT: Protest for Net Neutrality outside Representative Mike Coffman’s office."</div>
                 <div>
                     {% if campaign.use_title %}
                         <div>
