Update new event title.

--- a/event_create.html
+++ b/event_create.html
@@ -99,7 +99,7 @@
                     {% if campaign.use_title %}
                         <div>
                             <label for="id_event_title">Event name<span class="ak-required-flag">*</span></label>
-                            <input id="id_event_title" type="text" name="event_title" value="It’s recess but we’re not playing on net neutrality [Senator/ Representative (name)]">
+                            <input id="id_event_title" type="text" name="event_title" value="RED ALERT: Protest for Net Neutrality outside [Senator/ Representative (name)]’s office">
                         </div>
                     {% endif %}
 
