Update event info.

--- a/event_create.html
+++ b/event_create.html
@@ -43,7 +43,10 @@
             </div>
             <div id="event-info">
                     <h3>Tell us where your event is so others can join you!</h3>
-                    <p>Use <a target="_blank" href="https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0">this</a> to find out which one of your lawmaker’s still has not come out in support of the net neutrality CRA resolution and find their in-district office address. Need help figuring out who represents you in Congress? Click <a target="_blank" href="https://callyourrep.co/">here</a>. Preserving the open Internet matters to the overwhelming majority of Americans, so it’s important that we persuade as many members of Congress as possible to vote for the CRA resolution and thank those that already are. </p>
+                    <p>Tell us which Congressional office your protest will be at. Events will not be approved if they are submitted with residential addresses.
+                    </p>
+                    <p>Need help finding out who represents you in Congress? <a href="https://callyourrep.co/">Click here.</a></p>
+                    <p>Need help finding your member of Congress’ in-district office address? <a href="https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0">Click here.</a></p>
                     <div class="unknown_user">
                         <!--
                             This only shows if the user form includes all of the
