--- a/event_create.html
+++ b/event_create.html
@@ -202,13 +202,18 @@
                         </span>
                     </label>
                       <textarea id="id_event_public_description" name="event_public_description">  
-RSVP now to sign-wave for net neutrality outside your lawmaker’s office on Thursday, April 5th at 12PM and drop-off materials explaining why they need to vote for the CRA and protect real net neutrality rules.
+This protest is being planned in response to the upcoming Senate vote on the Congressional Review Act (CRA) resolution to save net neutrality. Congress needs to hear from us before they vote on the CRA resolution in mid-May, which is why we’re protesting on the 10th. RSVP now to let your local net neutrality organizer know that you can make it, and we’ll send you a protest guide and invite you to participate in an optional training calls with Team Internet staff and volunteers before the protest. 
 
-Net neutrality is not dead yet and it’s not too late to save it, but the clock is ticking! Congress will soon vote on the Congressional Review Act (CRA) resolution to reverse the FCC’s repeal, and before the CRA comes up for a vote, we need to make sure that as many lawmakers as possible are on our side. 
+The CRA resolution is Congress’ ONLY chance to overturn the FCC’s repeal and save real net neutrality rules for all—and in order for the resolution to pass the Senate and make it to the House, we need 51 senators to vote on our side. Right now, 50 senators are publicly supporting the CRA. We are going to protest outside as many Senate and House offices as possible because if we make it past the Senate vote, the battle quickly shifts to the House.
 
-Lawmakers are home for a congressional recess until April 6th so this a crucial opportunity to show up in force and put real pressure on them to support the CRA effort. 
+Big Cable’s lobbyists will stop at nothing to keep senators in opposition to the resolution, so we have to show up in mass numbers to make sure that our lawmakers know that we expect them to support real net neutrality rules by voting for the CRA. RSVP now!
 
-Once you RSVP, you’ll get materials to drop-off at your lawmaker’s office during your visit and we’ll connect you with others in your community attending through a pre-event call.
+Join the protest on Facebook to easily connect with other activists and help plan the event: [check back for Facebook event link!]
+
+### 
+
+Note: By choosing to attend this event, you are committing to participate non-violently and in accordance with the law, to work to de-escalate confrontations with others, and to obey the orders of authorized event marshals and of law enforcement. You also acknowledge that you are solely responsible for any injury or damage to your person or property resulting from or occurring during this event, and that you release all event sponsors and organizers (and their officers, directors, employees, and agents) from any liability for that injury or damage.
+                        
                       </textarea>
                 </div>
 
