--- a/date_picker.html
+++ b/date_picker.html
@@ -24,8 +24,8 @@
         {% else %}
             <input type="text" placeholder="hh:mm" size="8" name="{{ date_field.name }}_time" id="id_{{ date_field.name }}_time" value="05:30" format="time">
             <select name="{{ date_field.name }}_ampm" id="id_{{ date_field.name }}_ampm">
-                <option {% if date_field.default_ampm == 'AM' %}selected{% endif %} value="AM">AM</option>
-                <option selected value="PM">PM</option>
+                <option {% if date_field.default_ampm == 'AM' %}selected{% endif %} selected value="AM">AM</option>
+                <option  value="PM">PM</option>
             </select>
         {% endif %}
     {% endif %}
