--- a/event_create_source_map.html
+++ b/event_create_source_map.html
@@ -37,8 +37,8 @@
                     <h3>Tell us where your event is so others can join you!</h3>
                     <p>Tell us which Congressional office your protest will be at. Events will not be approved if they are submitted with residential addresses.
                     </p>
-                    <p>Need help finding out who represents you in Congress? <a href="https://callyourrep.co/">Click here.</a></p>
-                    <p>Need help finding your member of Congress’ in-district office address? <a href="https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0">Click here.</a></p>
+                    <p>Need help finding out who represents you in Congress? <a  target="_blank" href="https://callyourrep.co/">Click here.</a></p>
+                    <p>Need help finding your member of Congress’ in-district office address? <a  target="_blank" href="https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0">Click here.</a></p>
                     <div class="unknown_user">
                         <!--
                             This only shows if the user form includes all of the
