Update event description text.

--- a/event_create_source_dev.html
+++ b/event_create_source_dev.html
@@ -218,7 +218,7 @@
                         </span>
                     </label>
                     <textarea id="id_event_public_description" name="event_public_description">
-This protest is being planned in response to the upcoming Senate vote on the Congressional Review Act (CRA) resolution to save net neutrality. Congress needs to hear from us before they vote on the CRA resolution in mid-May, which is why we’re protesting on the 10th. RSVP now to let your local net neutrality organizer know that you can make it, and we’ll send you a protest guide and invite you to participate in an optional training calls with Team Internet staff and volunteers before the protest. 
+This protest is being planned in response to the upcoming Senate vote on the Congressional Review Act (CRA) resolution to save net neutrality. Congress needs to hear from us before they vote on the CRA resolution in mid-May, which is why we’re protesting on the 10th. RSVP now to let your local net neutrality organizer know that you can make it, and we’ll send you a protest guide and invite you to participate in an optional training call with Team Internet staff and volunteers before the protest. 
 
 The CRA resolution is Congress’ ONLY chance to overturn the FCC’s repeal and save real net neutrality rules for all—and in order for the resolution to pass the Senate and make it to the House, we need 51 senators to vote on our side. Right now, 50 senators are publicly supporting the CRA. We are going to protest outside as many Senate and House offices as possible because if we make it past the Senate vote, the battle quickly shifts to the House.
 
