Comment out importing of custom field html from actionKit.

--- a/event_create_source_map.html
+++ b/event_create_source_map.html
@@ -151,7 +151,7 @@
                         <input id="id_event_max_attendees" type="text" name="event_max_attendees" value="{{ campaign.default_event_size|default:"" }}" size=3>
                     </div> -->
 
-                    {% include_tmpl form.custom_field_html %}
+                    <!-- {% include_tmpl form.custom_field_html %} -->
                 </div>
             </div>
 
