--- a/event_attend.html
+++ b/event_attend.html
@@ -86,7 +86,7 @@
 
                     </div>
                     <div class="ak-err-below">
-                        <input name="action_potential_host" value="3159" style="padding:0;margin:0;vertical-align:bottom; position:relative; width: 20px; height: 20px;background: white; border-radius: 5px; border: 2px solid #555;" type="checkbox">
+                        <input name="action_potential_host" value="3159" style="padding:0;margin:-5px 0;vertical-align:bottom; position:relative; width: 30px !important; height: 30px !important ;background: white; border-radius: 5px; border: 2px solid #555;" type="checkbox">
                        
                         <label class="ak-checkbox-label" style="display:inline; text-indext:-15px">
                            <strong>I'd like to help organize this event with others.</strong>
