--- a/event_attend.html
+++ b/event_attend.html
@@ -89,7 +89,7 @@
                         <input name="action_potential_host" value="3159" style="padding:0;margin:-5px 0;vertical-align:bottom; position:relative; width: 30px !important; height: 30px !important ;background: white; border-radius: 5px;" type="checkbox">
                        
                         <label class="ak-checkbox-label" style="display:inline; text-indext:-15px">
-                            <div style="display:inline; font-size:15px; font-weight: bold">I'd like to help organize this event with others.</div>
+                            <div style="display:inline; font-size:15px; font-weight: bold">Yes, contact me so I can help organize this event with Team Internet!</div>
                         </label>
                         
                     </div>
