Update public description.

--- a/event_create_source_map.html
+++ b/event_create_source_map.html
@@ -232,18 +232,13 @@ RSVP now to join Team Internet for a quick visit and photo opportunity so we can
                             </span>
                         </label>
                             <textarea id="id_event_public_description" name="event_public_description">  
-This protest is being planned in response to the upcoming Senate vote on the Congressional Review Act (CRA) resolution to save net neutrality. Congress needs to hear from us before they vote on the CRA resolution in mid-May, which is why we’re protesting on the 14th. RSVP now to let your local net neutrality organizer know that you can make it, and we’ll send you a protest guide and invite you to participate in an optional training call with Team Internet staff and volunteers before the protest. 
+In a remarkable victory for Internet freedom, the U.S. Senate voted 52-47 to save net neutrality. 
 
-The CRA resolution is Congress’ ONLY chance to overturn the FCC’s repeal and save real net neutrality rules for all—and in order for the resolution to pass the Senate and make it to the House, we need 51 senators to vote on our side. Right now, 50 senators are publicly supporting the CRA. We are going to protest outside as many Senate and House offices as possible because if we make it past the Senate vote, the battle quickly shifts to the House.
+Join Team Internet at Senator Lisa Murkowski’s Anchorage office as we stop by to say thank you for voting in favor of the Congressional Review Act resolution to block the FCC’s net neutrality repeal. 
 
-Big Cable’s lobbyists will stop at nothing to keep senators in opposition to the resolution, so we have to show up in mass numbers to make sure that our lawmakers know that we expect them to support real net neutrality rules by voting for the CRA. RSVP now!
+She was one of only 3 GOP senators to vote in favor of protecting Internet users from powerful ISPs that want to be able to control, block, and throttle what we do online. 
 
-Join the protest on Facebook to easily connect with other activists and help plan the event: [check back for Facebook event link!]
-
-### 
-
-Note: By choosing to attend this event, you are committing to participate non-violently and in accordance with the law, to work to de-escalate confrontations with others, and to obey the orders of authorized event marshals and of law enforcement. You also acknowledge that you are solely responsible for any injury or damage to your person or property resulting from or occurring during this event, and that you release all event sponsors and organizers (and their officers, directors, employees, and agents) from any liability for that injury or damage.
-                
+RSVP now to join Team Internet for a quick visit and photo opportunity so we can amplify our thanks online!                       
                             </textarea>
                     </div>
 
