--- a/date_picker.html
+++ b/date_picker.html
@@ -6,7 +6,7 @@
             <input type="hidden" name="{{ date_field.name }}_date" id="id_{{ date_field.name }}_date" value="{{ date_field.default_date }}">
             {{ date_field.default_date }}
         {% else %}
-            <input type="text" placeholder="mm/dd/yyyy" value="5/14/2018" size="10" name="{{ date_field.name }}_date" id="id_{{ date_field.name }}_date" value="{{ date_field.default_date }}" format="date">
+            <input type="text" placeholder="mm/dd/yyyy" value="" size="10" name="{{ date_field.name }}_date" id="id_{{ date_field.name }}_date" value="{{ date_field.default_date }}" format="date">
         {% endif %}
         {% if not date_field.hidden_time %}
             at
@@ -22,7 +22,7 @@
             <input type="hidden" name="{{ date_field.name }}_ampm" id="id_{{ date_field.name }}_ampm" value="{{ date_field.default_ampm }}">
             {{ date_field.default_time }} {{ date_field.default_ampm }}
         {% else %}
-            <input type="text" placeholder="hh:mm" size="8" name="{{ date_field.name }}_time" id="id_{{ date_field.name }}_time" value="05:30" format="time">
+            <input type="text" placeholder="hh:mm" size="8" name="{{ date_field.name }}_time" id="id_{{ date_field.name }}_time" value="" format="time">
             <select name="{{ date_field.name }}_ampm" id="id_{{ date_field.name }}_ampm">
                 <option {% if date_field.default_ampm == 'AM' %}selected{% endif %}  value="AM">AM</option>
                 <option  selected value="PM">PM</option>
