Updated date event label.

--- a/event_create_source_map.html
+++ b/event_create_source_map.html
@@ -94,7 +94,7 @@
                     {% if campaign.use_title %}
                         <div>
                             <label for="id_event_title">Event name<span class="ak-required-flag">*</span></label>
-                            <input id="id_event_title" type="text" name="event_title" value="RED ALERT: Protest for Net Neutrality outside [Senator/ Representative (name)]’s office">
+                            <input id="id_event_title" type="text" name="event_title" value="">
                         </div>
                     {% endif %}
 
