--- a/event_create_source_dev.html
+++ b/event_create_source_dev.html
@@ -4,7 +4,7 @@
 <div class="ak-grid-row">
     <div class="ak-grid-col ak-grid-col-12-of-12">
         {% if not update %}
-            <h2>RED ALERT: PROTEST FOR NET NEUTRALITY! EVENT SUBMISSION FORM:</h2>
+            <h2>{{ page.title }}</h2>
         {% else %}
             <h2>Update Event Information</h2>
         {% endif %}
@@ -42,7 +42,7 @@
                     {% if campaign.use_title %}
                         <div>
                             <label for="id_event_title">Event name<span class="ak-required-flag">*</span></label>
-                            <input id="id_event_title" type="text" name="event_title" value="RED ALERT: Protest for Net Neutrality outside [Senator/ Representative (name)]’s office">
+                            <input id="id_event_title" type="text" name="event_title" value="Outside [Insert your Senator/ Representative]’s Congressional office">
                         </div>
                     {% endif %}
 
