Remove tell us about your event text and added event-info text back.

--- a/event_create_source_dev.html
+++ b/event_create_source_dev.html
@@ -36,8 +36,6 @@
 
             <div id="ak-event-info">
                 <h3>Tell us about your event:</h3>
-                <div>Add your member of Congress’ name to the protest’s event title so we can add it the map and recruit others to join you. For example, before submitting your event, the name should read, "RED ALERT: Protest for Net Neutrality outside Senator John Kennedy’s office," or, “RED ALERT: Protest for Net Neutrality outside Representative Mike Coffman’s office."
-                </div>
                 <div>
                     {% if campaign.use_title %}
                         <div>
@@ -150,6 +148,8 @@
 
             <div id="event-info">
                 <h3>Tell us where your event is so others can join you!</h3>
+                <p>Tell us which Congressional office your protest will be at. Events will not be approved if they are submitted with residential addresses.
+                </p>
                 <p>Need help finding out who represents you in Congress?<a href="https://callyourrep.co/"> Click here.</a></p>
                 <p>Need help finding your member of Congress’ in-district office address? <a href="https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0">Click here. </a></p>
                 <div class="unknown_user">
