Remove max attendance label, submitting value as 1000.

--- a/event_create_source_dev.html
+++ b/event_create_source_dev.html
@@ -90,10 +90,10 @@
                     {% endif %}
 
                     <div>
-                        <label for="id_event_max_attendees">
+                        <!-- <label for="id_event_max_attendees">
                             Maximum attendance<br><small>Leave blank for unlimited sign-ups</small>
-                        </label>
-                        <input id="id_event_max_attendees" type="text" name="event_max_attendees" value="1000" size=3>
+                        </label> -->
+                        <input type="hidden" id="id_event_max_attendees" type="text" name="event_max_attendees" value="1000" size=3>
                     </div>
 
                     <div id="ak-fieldbox-action_categories" class="ak-err-below">
