Added style sheet.

--- a/wrapper.html
+++ b/wrapper.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" href="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/teaminternet75x75.jpg" sizes="32x32" />
     <link rel="icon" type="image/png" href="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/teaminternet75x75.jpg" sizes="16x16" />
     <link rel="icon" type="image/png" href="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/teaminternet100x100.jpg" sizes="128x128" />
-
+    <link rel="stylesheet" href="https://www.dropbox.com/s/dusypw8swzz0rj2/powerPeople.css?dl=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
